# s3plot

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml
files/: 1.s3lg  temperature.s3lg
src/: app.rs  custom.rs  data.rs  eval.rs  fs.rs  lib.rs  main.rs  motor.rs  plot.rs  util.rs
src/data/: mod.rs  read.rs  sanity.rs
src/plot/: custom.rs  mod.rs  motor.rs  temp.rs
