[package]
name = "s3plot"
version = "0.1.0"
edition = "2021"

[dependencies]
cods = { git = "https://github.com/saecki/comeondosomething" }
serde = { version = "1.0" }
anyhow = "1.0"
eframe = { version = "0.25.0", features = ["persistence"] }
egui = { version = "0.25.0", features = ["persistence"] }
egui_plot = "0.25.0"
egui_extras = "0.25.0"
rfd = "0.13.0"
chrono = "0.4.33"
