[package]
name = "s3plot"
version = "0.1.0"
edition = "2021"

[dependencies]
cods = { git = "https://github.com/saecki/comeondosomething" }
serde = { version = "1.0" }
anyhow = "1.0"
eframe = { version = "0.28.1", features = ["persistence"] }
egui = { version = "0.28.1", features = ["persistence"] }
egui_plot = "0.28.1"
egui_extras = "0.28.1"
rfd = "0.14.1"
chrono = "0.4.38"
rand = "0.8.5"
