[package]
name = "s3plot"
version = "0.1.0"
edition = "2024"

[dependencies]
cods = { git = "https://github.com/saecki/comeondosomething" }
serde = { version = "1.0" }
anyhow = "1.0"
eframe = { version = "0.31.1", features = ["persistence"] }
egui = { version = "0.31.1", features = ["persistence"] }
egui_plot = "0.32.1"
egui_extras = "0.31.1"
rfd = "0.15.3"
chrono = "0.4.40"
rand = "0.9.0"
ron = "0.8.1"
